--- a/app/views/centros/index.html.erb
+++ b/app/views/centros/index.html.erb
@@ -1,8 +1,12 @@
 <h1 id="centros">Centros de Votaci&oacute;n</h1>
 <ul>
 	<% for centro in @centros %>
-		<li id="centro_<%= centro.id %>"> <%= centro.nombre %> </li>
-		| <%= link_to 'Mostrar', centro_path(centro) %>
-		| <%= link_to 'Primera Llamada', abrir_centro_path(centro) %>
+		<li id="centro_<%= centro.id %>">
+			<%= centro.nombre %>
+			| <%= link_to 'Mostrar', centro_path(centro) %>
+			| <%= link_to 'Primera Llamada', abrir_centro_path(centro) %>
+			| <%= link_to 'Segunda Llamada', llamada_control_path(centro) %>
+			| <%= link_to 'Tercera Llamada', cerrar_centro_path(centro), :id => "tercera_llamada_#{centro.id}" %>
+		</li>
 	<% end %>
 </ul>
