--- a/app/views/centros/show.html.erb
+++ b/app/views/centros/show.html.erb
@@ -1,38 +1,59 @@
-<h1 id="centro">Centro</h1>
-<ul>
-	<li> Nombre: <%= @centro.nombre %> </li>
-	<li> Estado: <%= @centro.estado %> </li>
-	<li> Municipio: <%= @centro.municipio %> </li>
-	<li> Parroquia: <%= @centro.parroquia %> </li>
-	<li> Votantes: <%= @centro.votantes %> </li>
-	<li id="centro_abrio"> ¿Abri&oacute; el centro?: <%= @centro.abrio != '2000-01-01 00:00:00.000000' ? 'Sí (' + @centro.abrio.strftime("
-	%I:%M%p") + ')' : 'No' %> </li>
-	<li id="centro_instalacion_correcta"> ¿Se instal&oacute; el centro de forma correcta?: <%= @centro.instalacion_correcta ? 'Sí' : 'No'  %> </li>
-	<li id="centro_testigos_nuestros_presentes"> ¿Se encuentran nuestros miembros y testigos?: <%= @centro.testigos_nuestros_presentes ? 'Sí' : 'No'  %> </li>
-	<li id="centro_otros_testigos_presentes"> ¿Est&aacute;n los testigos de otros candidatos?: <%= @centro.otros_testigos_presentes ? 'Sí' : 'No'  %> </li>
-	<li id="centro_plan_republica_presente"> ¿Lleg&oacute; el Plan Rep&uacute;blica?: <%= @centro.plan_republica_presente ? 'Sí' : 'No'  %> </li>
-</ul>
+	<h1 id="centro"><%= @centro.nombre %></h1>
+	<h6> <%= @centro.estado %> > <%= @centro.municipio %> > <%= @centro.parroquia %></h6>
+</div>
+<div class="row">
+	<div class="span1">&nbsp;</div>
+	<div class="span6" style="border-right:1px solid #eee;">
+		<h3>Primera Llamada</h3>
+		<ul>
+			<li id="centro_abrio"> ¿Abri&oacute; el centro?: 
+				<strong><%= @centro.abrio != nil ? 'Sí (' + @centro.abrio.strftime("%I:%M%p") + ')' : 'No' %></strong> </li>
+			<li id="centro_instalacion_correcta"> ¿Se instal&oacute; el centro de forma correcta?: <strong><%= @centro.instalacion_correcta ? 'Sí' : 'No'  %></strong> </li>
+			<li id="centro_testigos_nuestros_presentes"> ¿Se encuentran nuestros miembros y testigos?: <strong><%= @centro.testigos_nuestros_presentes ? 'Sí' : 'No'  %></strong> </li>
+			<li id="centro_otros_testigos_presentes"> ¿Est&aacute;n los testigos de otros candidatos?: <strong><%= @centro.otros_testigos_presentes ? 'Sí' : 'No'  %></strong> </li>
+			<li id="centro_plan_republica_presente"> ¿Lleg&oacute; el Plan Rep&uacute;blica?: <strong><%= @centro.plan_republica_presente ? 'Sí' : 'No'  %></strong> </li>
+		</ul>
 
-<h2 id="llamadas"> Llamadas de control </h2>
-<% for llamada in Llamada.where :centro_id => @centro.id %>
-	<ul>
-		<li class="funcionando"> ¿El centro est&aacute; funcionando correctamente?: <%= llamada.funcionando ? 'Sí' : 'No' %> </li>
-		<li class="votos"> ¿Cu&aacute;ntas personas han votado?: <%= llamada.votos %> </li>
-		<li class="cerrado_forzado"> ¿Cerraron el centro de manera forzada? <%= llamada.cerrado_forzado ? 'Sí' : 'No' %> </li>
-	</ul>
-<% end %>
-
-<p>¿Cerr&oacute; el centro?: <%= @centro.cerro != nil ? 'Sí (' + @centro.cerro.strftime("%I:%M%p") + ')' : 'No' %> </p>
-<p>¿Se hizo el escrutinio?: <%= @centro.escrutinio != nil ? 'Sí (' + @centro.escrutinio.strftime("%I:%M%p") + ')' : 'No' %> </p>
-<% for mesa in Mesa.where :centro_id => @centro.id %>
-	<p>Mesa <%= mesa.numero %></p>
-	<ul>
-		<li> Votos HC: <%= mesa.votos_hc %> </li>
-		<li> Votos LL: <%= mesa.votos_ll %> </li>
-		<li> Votos PP: <%= mesa.votos_pp %> </li>
-		<li> Votos MC: <%= mesa.votos_mc %> </li>
-		<li> Votos DA: <%= mesa.votos_da %> </li>
-		<li> Votos PM: <%= mesa.votos_pm %> </li>
-	</ul>
-<% end %>
-<!-- @centro.abrio.strftime("%I:%M%p") -->
+		<h3>&Uacute;ltima Llamada</h3>
+		<ul class="unstyled">
+			<li>¿Cerr&oacute; el centro?: <strong><%= @centro.cerro != nil ? 'Sí (' + @centro.cerro.strftime("%I:%M%p") + ')' : 'No' %></strong> </li>
+			<li>¿Se hizo el escrutinio?: <strong><%= @centro.escrutinio != nil ? 'Sí (' + @centro.escrutinio.strftime("%I:%M%p") + ')' : 'No' %></strong> </li>
+		</ul>
+		<% for mesa in Mesa.where :centro_id => @centro.id %>
+		<h5>Mesa <%= mesa.numero %></h5>
+		<ul>
+			<li> Votos HC: <strong><%= mesa.votos_hc %> </strong> </li>
+			<li> Votos LL: <strong><%= mesa.votos_ll %> </strong> </li>
+			<li> Votos PP: <strong><%= mesa.votos_pp %> </strong> </li>
+			<li> Votos MC: <strong><%= mesa.votos_mc %> </strong> </li>
+			<li> Votos DA: <strong><%= mesa.votos_da %> </strong> </li>
+			<li> Votos PM: <strong><%= mesa.votos_pm %> </strong> </li>
+		</ul>
+		<% end %>
+	</div>
+	<!-- <div class="span1">&nbsp;</div> -->
+	<div class="span6">
+		<h3 id="llamadas"> Llamadas de control </h3>
+		<ol>
+		<% for llamada in Llamada.where :centro_id => @centro.id %>
+			<li>
+			<ul>
+				<li class="funcionando"> ¿El centro est&aacute; funcionando correctamente?: <strong><%= llamada.funcionando ? 'Sí' : 'No' %></strong> </li>
+				<li class="votos"> ¿Cu&aacute;ntas personas han votado?: <strong><%= llamada.votos %></strong> </li>
+				<li class="cerrado_forzado"> ¿Cerraron el centro de manera forzada? <strong><%= llamada.cerrado_forzado ? 'Sí' : 'No' %></strong> </li>
+			</ul>
+			</li>
+			<br/>
+		<% end %>
+		</ol>
+		
+		<h3>Incidencias</h3>
+		<% for incidencia in Incidencia.where :centro_id => @centro.id %>
+		<div class="alert-message block-message warning">
+			<% ti = TipoIncidencia.find(incidencia.tipo_incidencia_id) %>
+			<strong> <%= ti.descripcion + ' > ' + Anomalia.find(ti.anomalia_id).descripcion %> </strong>
+			<p> <%= incidencia.descripcion %>  </p>
+		</div>
+		<% end %>
+	</div>
+</div>
