--- a/app/views/centros/_mesas_form.html.erb
+++ b/app/views/centros/_mesas_form.html.erb
@@ -1,32 +1,46 @@
-<h2>Mesa #<%= f.object.numero %></h2>
+<br/>
+<fieldset>
+<legend>Mesa #<%= f.object.numero %></legend>
+<div class="clearfix">
+	<%= f.label :votos_hc, "Votos HC" %>
+	<div class="input">
+		<%= f.text_field :votos_hc, :class => 'span2' %>
+	</div>
+</div>
 
-<p>
-<%= f.label :votos_hc, "¿Cuántos votaron por HC?" %>
-<%= f.text_field :votos_hc %>
-</p>
+<div class="clearfix">
+	<%= f.label :votos_ll, "Votos LL" %>
+	<div class="input">
+		<%= f.text_field :votos_ll, :class => 'span2' %>
+	</div>
+</div>
 
+<div class="clearfix">
+	<%= f.label :votos_pp, "Votos PP" %>
+	<div class="input">
+		<%= f.text_field :votos_pp, :class => 'span2' %>
+	</div>
+</div>
 
-<p>
-<%= f.label :votos_ll, "¿Cuántos votaron por LL?" %>
-<%= f.text_field :votos_ll %>
-</p>
+<div class="clearfix">
+	<%= f.label :votos_mc, "Votos MC" %>
+	<div class="input">
+		<%= f.text_field :votos_mc, :class => 'span2' %>
+	</div>
+</div>
 
-<p>
-<%= f.label :votos_pp, "¿Cuántos votaron por PP?" %>
-<%= f.text_field :votos_pp %>
-</p>
+<div class="clearfix">
+	<%= f.label :votos_da, "Votos DA" %>
+	<div class="input">
+		<%= f.text_field :votos_da, :class => 'span2' %>
+	</div>
+</div>
 
-<p>
-<%= f.label :votos_mc, "¿Cuántos votaron por MC?" %>
-<%= f.text_field :votos_mc %>
-</p>
+<div class="clearfix">
+	<%= f.label :votos_pm, "Votos PM" %>
+	<div class="input">
+		<%= f.text_field :votos_pm, :class => 'span2' %>
+	</div>
+</div>
 
-<p>
-<%= f.label :votos_da, "¿Cuántos votaron por DA?" %>
-<%= f.text_field :votos_da %>
-</p>
-
-<p>
-<%= f.label :votos_pc, "¿Cuántos votaron por PM?" %>
-<%= f.text_field :votos_pm %>
-</p>
+</fieldset>
