--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,38 @@
 <head>
   <title>Contabilizacion</title>
   <%= stylesheet_link_tag    "application" %>
+  <%= stylesheet_link_tag    "bootstrap" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div class="topbar">
+		<div class="fill">
+			<div class="container">
+				<a class="brand" href="<%= root_path %>">Contabilizaci&oacute;n</a>
+				<ul class="nav">
 
-<%= yield %>
+				</ul>
+			</div>
+		</div>
+	</div>
+	
+	<div class="container">
+		<div class="content">
+			<div class="page-header">
 
+			<% flash.each do |key, msg| %>
+			<div class="<%= 'alert-message ' + (key.to_s == 'notice' ? 'warning' : (key.to_s == 'success' ? 'success' : 'error')) %>">
+			  <a class="close" href="#">×</a>
+			  <p><strong><%= msg %></strong></p>
+			</div>	
+			<% end %>
+
+		<%= yield %>
+		</div>
+		<footer>
+        	<p>14 de Febrero de 2012</p>
+      	</footer>
+    </div> <!-- /container -->
 </body>
 </html>
