--- a/app/views/centros/abrir.html.erb
+++ b/app/views/centros/abrir.html.erb
@@ -2,8 +2,8 @@
 </div>
 <%= form_for @centro do |f| %>
 <div class="row">
-	<div class="span3"> &nbsp; </div>
-	<div class="span7">
+	<div class="span1"> &nbsp; </div>
+	<div class="span6">
 		<fieldset>
 			<div class="clearfix">
 				<%= f.label :abrio, '¿Abrió el centro?' %>
@@ -24,7 +24,7 @@
 					</ul>
 				</div>
 			</div>
-	
+				
 			<div class="clearfix">
 				<%= f.label :instalacion_correcta, '¿Se instaló el centro de forma correcta?' %>
 				<div class="input">
@@ -57,7 +57,7 @@
 						</li>
 						<li>
 							<label>
-								<%= f.radio_button :testigos_nuestros_presentes, :false %>
+								<%= f.radio_button :testigos_nuestros_presentes, :false  %>
 								<span><%= 'No' %></span>
 							</label>
 						</li>
@@ -104,11 +104,24 @@
 					</ul>
 				</div>
 			</div>
-			<div class="actions">
-				<%= f.submit "Guardar", :disable_with => 'Guardando...', :class => 'btn primary'%>
-				<button type="reset" class="btn"> Cancelar </button>
-			</div>
+
 		</fieldset>
 	</div>
+	<div class="span7">
+		<%= f.fields_for :incidencias, f.object.class.reflect_on_association(:incidencias).klass.new do |builder| %>
+		<%= render 'incidencia_form', :f => builder %>
+		<% end %>
+		
+		<p id="link_add" ><%= link_to_add_fields 'Agregar Nueva Incidencia', f, :incidencias %></p>
+	</div>
 </div>
+<div class="row">
+	<div class="span14">
+	<div class="actions">
+		<%= f.submit "Guardar", :disable_with => 'Guardando...', :class => 'btn primary'%>
+		<button type="reset" class="btn"> Cancelar </button>
+	</div>
+	</div>
+</div>
+<!-- </div> -->
 <% end %>
