--- a/app/views/centros/control.html.erb
+++ b/app/views/centros/control.html.erb
@@ -25,7 +25,9 @@
 							</li>
 						</ul>
 					</div>
+					
 				</div>
+					<div class="clearfix"> <!-- link_to_add_fields "Nueva incidencia", f, :incidencias --> </div>
 				
 				<div class="clearfix">
 					<%= llamada.label :votos, '¿Cuántas personas han votado?' %>
