--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= stylesheet_link_tag    "bootstrap" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <%= yield :head %>
 </head>
 <body>
 	<div class="topbar">
@@ -25,7 +26,7 @@
 
 			<% flash.each do |key, msg| %>
 			<div class="<%= 'alert-message ' + (key.to_s == 'notice' ? 'warning' : (key.to_s == 'success' ? 'success' : 'error')) %>">
-			  <a class="close" href="#">×</a>
+			<%= link_to_function '×', 'slide_up(this.parentNode)', :class => 'close'%>
 			  <p><strong><%= msg %></strong></p>
 			</div>	
 			<% end %>
