--- a/app/views/centros/abrir.html.erb
+++ b/app/views/centros/abrir.html.erb
@@ -123,5 +123,11 @@
 	</div>
 	</div>
 </div>
+
+<!-- <script type="text/javascript">
+  $(function(){
+    $.ajax({ url: '/javascripts/anomalias.js', type: 'get', dataType:'script' });
+  });
+</script> -->
 <!-- </div> -->
 <% end %>
