--- a/app/views/centros/_mesas_form.html.erb
+++ b/app/views/centros/_mesas_form.html.erb
@@ -4,42 +4,42 @@
 <div class="clearfix">
 	<%= f.label :votos_hc, "Votos HC" %>
 	<div class="input">
-		<%= f.text_field :votos_hc, :class => 'span2' %>
+		<%= f.text_field :votos_hc, :class => 'mini' %>
 	</div>
 </div>
 
 <div class="clearfix">
 	<%= f.label :votos_ll, "Votos LL" %>
 	<div class="input">
-		<%= f.text_field :votos_ll, :class => 'span2' %>
+		<%= f.text_field :votos_ll, :class => 'mini' %>
 	</div>
 </div>
 
 <div class="clearfix">
 	<%= f.label :votos_pp, "Votos PP" %>
 	<div class="input">
-		<%= f.text_field :votos_pp, :class => 'span2' %>
+		<%= f.text_field :votos_pp, :class => 'mini' %>
 	</div>
 </div>
 
 <div class="clearfix">
 	<%= f.label :votos_mc, "Votos MC" %>
 	<div class="input">
-		<%= f.text_field :votos_mc, :class => 'span2' %>
+		<%= f.text_field :votos_mc, :class => 'mini' %>
 	</div>
 </div>
 
 <div class="clearfix">
 	<%= f.label :votos_da, "Votos DA" %>
 	<div class="input">
-		<%= f.text_field :votos_da, :class => 'span2' %>
+		<%= f.text_field :votos_da, :class => 'mini' %>
 	</div>
 </div>
 
 <div class="clearfix">
 	<%= f.label :votos_pm, "Votos PM" %>
 	<div class="input">
-		<%= f.text_field :votos_pm, :class => 'span2' %>
+		<%= f.text_field :votos_pm, :class => 'mini' %>
 	</div>
 </div>
 
