--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -32,8 +32,8 @@
 		<%= f.submit "Crear Usuario", :disable_with => 'Espere...', :class => ['btn small primary'] %> <br/>
 	</div>
 	<% end %>
-	<div class="clearfix">
+	<!-- <div class="clearfix">
 		<%= render :partial => "devise/shared/links" %>
-	</div>
+	</div> -->
 </div>
 </div>
