--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -33,7 +33,8 @@
 	</div>
 	<% end %>
 	<!-- <div class="clearfix">
-		<%= render :partial => "devise/shared/links" %>
+		<%= #render :partial => "devise/shared/links" 
+		%>
 	</div> -->
 </div>
 </div>
