--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -398,3 +398,10 @@ body {
 .topbar .btn {
   border: 0;
 }
+p.hora {
+	text-align:right;
+	width:100%;
+	font-size:9pt;
+	margin-top:-10px;
+	margin-bottom:-15px;
+}
