--- a/app/assets/stylesheets/llamadas.css.scss
+++ b/app/assets/stylesheets/llamadas.css.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the Llamadas controller here.
+// Place all the styles related to the llamadas controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
