--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,10 @@
 	<div class="topbar">
 		<div class="fill">
 			<div class="container">
-				<a class="brand" href="<%= root_path %>">Contabilizaci&oacute;n</a>
+				<a class="brand" href="#">Contabilizaci&oacute;n</a>
+				<ul class="nav">
+					<li> <%= link_to "Centros", centros_path %>  </li>
+				</ul>
 				<% if usuario_signed_in? %>
 				<ul class="nav secondary-nav">
 					<li> <%= link_to "Cerrar Sesión", destroy_usuario_session_path, :method => :delete %>  </li>
