--- a/app/views/centros/index.html.erb
+++ b/app/views/centros/index.html.erb
@@ -1,25 +1,29 @@
   <h1>Centros de Votaci&oacute;n</h1>
 </div>
 
-		<table class="bordered-table zebra-striped">
-			<thead>
-				<tr>
-					<th width="360px">Centro</td>
-					<th>Ver</td>
-					<th>Abrir</td>
-					<th>Control</td>
-					<th>Cerrar</td>
-				</tr>
-			</thead>
-			<tbody>
-				<% for centro in @centros %>
-				<tr>
-					<td style="font-size:9pt"> <%= centro.nombre %> </td>
-					<td> <%= link_to 'Ver', centro_path(centro), :class => 'btn small'%> </td>
-					<td> <%= link_to 'Primera Llamada', abrir_centro_path(centro), :class => 'btn small primary' %> </td>
-					<td> <%= link_to 'Llamada de Control', centro_control_path(centro), :class => 'btn small info' %> </td>
-					<td> <%= link_to 'Última Llamada', cerrar_centro_path(centro), :id => "tercera_llamada_#{centro.id}", :class => 'btn small success' %> </td>
-				</tr>
-				<% end %>
-			</tbody>
-		</table>
+<table class="bordered-table zebra-striped">
+	<thead>
+		<tr>
+			<th <% if !es_observador? %> width="360px" <% end%> >Centro</td>
+			<th>Ver</td>
+			<% if !es_observador? %>
+			<th>Abrir</td>
+			<th>Control</td>
+			<th>Cerrar</td>
+			<% end %>
+		</tr>
+	</thead>
+	<tbody>
+		<% for centro in @centros %>
+		<tr>
+			<td style="font-size:9pt"> <%= centro.nombre %> </td>
+			<td> <%= link_to 'Ver', centro_path(centro), :class => 'btn small'%> </td>
+			<% if !es_observador? %>
+			<td> <%= link_to 'Primera Llamada', abrir_centro_path(centro), :class => ['btn','small','primary'] %> </td>
+			<td> <%= link_to 'Llamada de Control', centro_control_path(centro), :class => ['btn','small','info'] %> </td>
+			<td> <%= link_to 'Última Llamada', cerrar_centro_path(centro), :id => "tercera_llamada_#{centro.id}", :class => ['btn','small','success'] %> </td>
+			<% end %>
+		</tr>
+		<% end %>
+	</tbody>
+</table>
