todas las llamadas y las incidencias se pueden modificar. las llamadas muestran los valores en el formulario cuando se modifican. atributo presente en usuarios.

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -405,3 +405,7 @@ p.hora {
 	margin-top:-10px;
 	margin-bottom:-15px;
 }
+.alert-message.block-message.warning a {
+	color:blue;
+	font-weight:normal;
+}
