--- a/app/views/admins/modificar_usuario.html.erb
+++ b/app/views/admins/modificar_usuario.html.erb
@@ -5,8 +5,8 @@
 	</div>
 </div>
 </div>
-<center><h2>Crear Usuario</h2></center>
+<center><h2>Modificar Usuario</h2></center>
 <br /><br />
 
 
-<%= render 'devise/registrations/usuario', :url => new_usuario_path %>
+<%= render 'devise/registrations/usuario', :url => edit_usuario_path %>
