--- a/app/views/llamadas/modificar.html.erb
+++ b/app/views/llamadas/modificar.html.erb
@@ -1,4 +1,1 @@
-  <h1>Llamada de Control<small> <%= @llamada.centro.nombre %> </small></h1>
-</div>
-
-<%= render 'modificar', :llamada => @llamada %>
+<%= render 'centros/llamada_de_control' %>
